--- a/.github/workflows/send-email-on-push.yml
+++ b/.github/workflows/send-email-on-push.yml
@@ -32,7 +32,7 @@ jobs:
           username: ${{ secrets.MAIL_USERNAME }}
           password: ${{ secrets.MAIL_PASSWORD }}
           # Sender and recipient details
-          subject: 'New Update Pushed to Resume-Rag Backend Application' # Email subject
+          subject: "New Commit on ${{ github.repository }} - ${{ github.sha }}" # Email subject
           to: ${{ secrets.RECIPIENT_EMAIL }} # Recipient email, using GitHub Secret
           from: ${{ secrets.MAIL_USERNAME }} # Sender email
           # Email body containing the commit message
@@ -42,9 +42,9 @@ jobs:
             Repository: ${{ github.repository }}
 
             Commit Author: ${{ github.event.head_commit.author.name }}
-            
+
             Commit Message:
-            
+
             ${{ steps.get_message.outputs.commit_message }}
 
             View the commit: ${{ github.event.head_commit.url }}
