Implemented Asynchronous Communication Service:
- Created a Communication controller to centralize every/all
communication requests.
- Implemented Communication Service to asynchronously handle email
requests coming through the communication controller using Azure Storage
Queues.
- Enabled spring scheduling to poll for new messages in the storage
queue.
- Implemented Email Consumer to consume and process new messages from
the storage queue.
- Added Azure Storage Queue dependency.

--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,12 @@
 			<groupId>com.azure</groupId>
 			<artifactId>azure-communication-email</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>com.azure.spring</groupId>
+			<artifactId>spring-messaging-azure-storage-queue</artifactId>
+		</dependency>
+		
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
