--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,7 @@ spring.data.mongodb.uri=${MONGODB_URI}
 #Azure Storage config
 #Blob storage config
 spring.cloud.azure.storage.blob.connection-string=${AZURE_STORAGE_CONNECTION_STRING}
+azure.storage.connection-string=${AZURE_STORAGE_CONNECTION_STRING}
 
 azure.storage.resume.container.name = ${RESUME_CONTAINER_NAME}
 azure.storage.jd.container.name = ${JD_CONTAINER_NAME}
