--- a/.github/workflows/main_resume-rag.yml
+++ b/.github/workflows/main_resume-rag.yml
@@ -25,7 +25,7 @@ jobs:
           distribution: 'microsoft'
 
       - name: Build with Maven
-        run: mvn clean install
+        run: mvn clean install -DskipTests
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -50,4 +50,5 @@ jobs:
           app-name: 'resume-rag'
           slot-name: 'Production'
           package: '*.jar'
+
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_457C93C0C1BE4867A1182D6DCE130561 }}
