--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
 		</dependency>
@@ -119,7 +124,7 @@
 			<groupId>com.azure.spring</groupId>
 			<artifactId>spring-messaging-azure-storage-queue</artifactId>
 		</dependency>
-		
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
