Secured backend with with an API-Key:
- Added custom ApiKeyInterceptor to check for a valid api key in the
client's request header to have secured access to every backend API
endpoint.
- Added custom apiKeyInterceptor to the InterceptorRegistry.
- Define a custom api-key prop in the .properties file.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,6 +46,8 @@ spring.kafka.consumer.group-id= resume-group
 
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
+#Api key
+custom.api.key=${API_KEY}
 
 #Max file size for upload
 spring.servlet.multipart.max-file-size=10MB
