Implemented Basic CallService:
- Added a startCall method in the call service which receives a target
phone number.
- Created to new endpoints for starting a call and receiving callback
requests from ACS.
- Updated the ACS connection string property name.
- Added callAutomation dependency.

--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.azure</groupId>
+			<artifactId>azure-communication-callautomation</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>com.azure.spring</groupId>
 			<artifactId>spring-messaging-azure-storage-queue</artifactId>
 		</dependency>
