--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,8 +28,9 @@ azure.storage.jd.container.name = ${JD_CONTAINER_NAME}
 
 #Azure communcation service config
 
-azure.communication.email.connection-string=${AZURE_COMMUNICATION_SERVICE_CONNECTION_STRING}
+azure.communication.connection-string=${AZURE_COMMUNICATION_SERVICE_CONNECTION_STRING}
 azure.communication.email.sender-address=${EMAIL_SENDER_ADDRESS}
+azure.communication.from-phone-number=${FROM_PHONE_NUMBER}
 
 ##Kafka config
 
