--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 	<properties>
 		<java.version>21</java.version>
 		<spring-ai.version>1.0.0</spring-ai.version>
-		<spring-cloud-azure.version>5.22.0</spring-cloud-azure.version>
+		<spring-cloud-azure.version>5.23.0</spring-cloud-azure.version>
 
 	</properties>
 	<dependencies>
@@ -123,6 +123,12 @@
 		<dependency>
 			<groupId>com.azure</groupId>
 			<artifactId>azure-communication-callautomation</artifactId>
+			<version>1.5.0</version><!--$NO-MVN-MAN-VER$-->
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
 
 		<dependency>
