--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,10 @@ spring.ai.vectorstore.azure.index-name=${AZURE_INDEX_NAME}
 
 spring.ai.vectorstore.azure.initialize-schema=false
 
+#Azure Voice Live API config
+azure.voice-live.websocket.url=${AZURE_VOICE_LIVE_WS_URL}
+azure.voice-live.api-key=${AZURE_VOICE_LIVE_API_KEY}
+
 #MongoDB config
 spring.data.mongodb.uri=${MONGODB_URI}
 
