--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=resume_rag
-
+app.url.host = ${APP_URL_HOST}
 
 spring.ai.azure.openai.api-key=${OPENAI_API_KEY}
 spring.ai.azure.openai.endpoint=${OPENAI_END_POINT}
