WhatsApp Service, sends template messages:
- Created WhatsApp Service that sends initial template message.
- Used RestClient to send message via facebook's graph API.
- A communication document is created upon sending a new templatet
message.
- Created a WhatsAppContentDTO which is similar to CallContentDTO for
the providing type in the content field of Communication.
- Created a temporary Utterance class, keeping in mind to create a
common parent class for all content DTOs.
- Added a new communication type called WHATSAPP, and added a new method
in CommunicationRepository for finding communication based on TYPE as
well in addition to ResumeId and JdId.
- Added new whatsapp config to application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -59,3 +59,9 @@ spring.servlet.multipart.max-file-size=10MB
 
 #cors config
 cors.allowed.origins= ${ALLOWED_ORIGINS}
+
+
+# Whatsapp config
+whatsapp.api.url = ${WHATSAPP_API_URL}
+whatsapp.api.phone-number-id = ${WHATSAPP_API_PHONE_NUMBER_ID}
+whatsapp.api.token = ${WHATSAPP_API_TOKEN}
