--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -65,3 +65,4 @@ cors.allowed.origins= ${ALLOWED_ORIGINS}
 whatsapp.api.url = ${WHATSAPP_API_URL}
 whatsapp.api.phone-number-id = ${WHATSAPP_API_PHONE_NUMBER_ID}
 whatsapp.api.token = ${WHATSAPP_API_TOKEN}
+whatsapp.verify.token = ${WHATSAPP_VERIFY_TOKEN}
